Update 'backend-tests-go-geflwrpu' component image to: quay.io/rhtap_qe/backend-tests-go-geflwrpu:13827405c7b52108f6a358d14670cef1cd05fdc2@sha256:04b2ebb200f1888eeff5882de67a6498f894a18ab6cd2bc279e8cc480576de29

--- a/components/backend-tests-go-geflwrpu/overlays/development/deployment-patch.yaml
+++ b/components/backend-tests-go-geflwrpu/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: backend-tests-go-geflwrpu
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/backend-tests-go-geflwrpu:13827405c7b52108f6a358d14670cef1cd05fdc2@sha256:04b2ebb200f1888eeff5882de67a6498f894a18ab6cd2bc279e8cc480576de29
+          name: container-image
